Poprawiona ścieżka z calendar.py

--- a/Kal/calendar.html
+++ b/Kal/calendar.html
@@ -1,6 +1,6 @@
-<!-- cal/calendar.html -->
+<!-- Kal/calendar.html -->
 
-{'% extends 'cal/base.html' %}
+{'% extends 'Kal/base.html' %}
 
 {'% block content %}
 {'{ calendar }}
